compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case5.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case 1, 2.22, \"three\" { x, _, y if x >= y -> 1 }"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:41
  │
1 │ case 1, 2.22, "three" { x, _, y if x >= y -> 1 }
  │                                         ^

Expected type:

    Int

Found type:

    String
