compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case_operator_unify_situation.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 281
expression: "case 1, 2.0 { a, b -> a + b }"
---
----- SOURCE CODE
case 1, 2.0 { a, b -> a + b }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:27
  │
1 │ case 1, 2.0 { a, b -> a + b }
  │                           ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    Float

Hint: the +. operator can be used with Floats
