compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__case_tuple_guard.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 360
expression: "case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }"
---
----- SOURCE CODE
case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:24
  │
1 │ case #(1, 2, 3) { x if x == #(1, 1.0) -> 1 }
  │                        ^^^^^^^^^^^^^^

Expected type:

    #(Int, Int, Int)

Found type:

    #(Int, Float)
