compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_annotation_wrong.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1410
expression: "pub const group_id: Int = \"42\""
---
----- SOURCE CODE
pub const group_id: Int = "42"

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:27
  │
1 │ pub const group_id: Int = "42"
  │                           ^^^^

Expected type:

    Int

Found type:

    String
