compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_annotation_wrong_4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "pub const pair: #(Int, Float) = #(4.1, 1)"
---
----- SOURCE CODE
pub const pair: #(Int, Float) = #(4.1, 1)

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:33
  │
1 │ pub const pair: #(Int, Float) = #(4.1, 1)
  │                                 ^^^^^^^^^

Expected type:

    #(Int, Float)

Found type:

    #(Float, Int)
