compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_heterogenus_list.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const pair = [1, 1.0]"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:18
  │
1 │ const pair = [1, 1.0]
  │                  ^^^

Expected type:

    Int

Found type:

    Float
