compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_multiple_errors_invalid_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const invalid_value: String = MyInvalidValue\nconst invalid_unannotated_value = [1, 2.0]"
---
----- SOURCE CODE
const invalid_value: String = MyInvalidValue
const invalid_unannotated_value = [1, 2.0]

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.rakun:1:31
  │
1 │ const invalid_value: String = MyInvalidValue
  │                               ^^^^^^^^^^^^^^

The name `MyInvalidValue` is not in scope here.

error: Type mismatch
  ┌─ /src/one/two.rakun:2:39
  │
2 │ const invalid_unannotated_value = [1, 2.0]
  │                                       ^^^

Expected type:

    Int

Found type:

    Float
